css/styles.css
:root {
    --clr-text: hsla(0, 0%, 0%, 1);
    --clr-text2: hsla(220, 9%, 46%, 1);
    --clr-text3: hsla(0, 0%, 100%, 1);
    --clr-text4: hsla(0, 3%, 87%, 1);
    --clr-bg-gray: hsla(210, 20%, 98%, 1);
    --clr-borders: hsla(216, 12%, 84%, 1);
    --clr-details: hsla(221, 39%, 11%, 1);
    --clr-read-more: hsla(0, 0%, 15%, 1);

    --ff-primary: 'Inter', sans-serif;
    
    --ff-body: var(--ff-primary);

    --fw-regular: 400;
    --fw-medium: 500;
    --fw-bold: 700;
    --fw-extra-bold: 800;

    --fs-42: 2.675rem;
    --fs-18: 1.125rem;
    --fs-14: 0.875rem;
    --fs-12: 0.75rem;

    --fs-body: var(--fs-14);
    --fs-primary-heading: var(--fs-42);
    --fs-secondary-heading: var(--fs-18);
    --fs-details: var(--fs-12);
}

/* UTILITY CLASSES */
.text-primary {
    color: var(--clr-text);
}
.text-secondary {
    color: var(--clr-text2);
}
.text-body {
    color: var(--clr-text3);
}
.text-details {
    color: var(--clr-details);
}
.text-read-more {
    color: var(--clr-read-more);
}
.text-light-grey {
    color: var(--clr-text4);
}

.bg-white {
    background-color: var(--clr-text3);
}

.fw-regular {
    font-weight: var(--fw-regular);
}
.fw-medium {
    font-weight: var(--fw-medium);
}
.fw-bold {
    font-weight: var(--fw-bold);
}
.fw-extra-bold {
    font-weight: var(--fw-extra-bold);
}

.fs-primary-heading {
    font-size: var(--fs-primary-heading);
}
.fs-secondary-heading {
    font-size: var(--fs-secondary-heading);
}
.fs-details {
    font-size: var(--fs-details);
}

.flex-group {
    display: flex;
    flex-direction: row;
}

/* GENERAL STYLING */
body {
    font-family: var(--ff-body);
    font-size: var(--fs-body);
    font-weight: var(--fw-regular);
    color: var(--clr-text3);
}

.container {
    position: relative;
}

/* HEADER */
.header {
    background: url("/assets/images/header-bg.png"), rgb(32, 32, 32) 0px -158.291px / 100% 423.007%;
    height: 208px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.header a {
    text-decoration: none;
}

.header i {
    font-size: var(--fs-18);
}

.header h1 { 
    font-size: clamp(1.3rem, 0.665rem + 1.6749vw, 2.675rem);
}

.header__watchlist {
    background: none;
    border: none;
    cursor: pointer;
}

.header__watchlist::after {
    content: "";
    margin-left: 17px;
    width: 0%;
    height: 2px;
    display: block;
    transition: all 0.8s ease;
}

.header__watchlist:hover::after {
    width: 84%;
    height: 2px;
    background-color: var(--clr-text3);
}

/* SEARCH FORM */
.search-form {
    display: grid;
    grid-template-columns: 70% auto;
    max-width: 450px;
    border: 1px solid var(--clr-borders);
    border-radius: 0.4rem;
    overflow: hidden;
    position: absolute;
    margin: 0 auto;
    top: 187px;
    left: 0;
    right: 0;
}

@media (max-width: 500px) {
    .search-form {
        margin: 0 1rem;
    }
}

.search-form__input {
    border: none;
    outline: none;
    background: transparent;
    width: 100%;
}

.search-form__btn {
    padding: 0.563rem 0.500rem;
    border-width: 1px;
    border-style: solid;
    border-color: var(--clr-borders);
    border-top: none;
    border-right: none;
    border-bottom: none;
    background: var(--clr-bg-gray);
    cursor: pointer;
    
        &:hover {
            background: hsla(210, 20%, 95%, 1);
        }
}

.search-icon {
    margin: auto 0.8rem;
}

/* MOVIE LIST */

.movie--container {
    margin: 3.188rem 1rem;
    
    /* responsive grid */
    --min-column-size: 27rem;
    display: grid;
    place-content: center;
    gap: 1rem;
    grid-template-columns: 
        repeat(auto-fit, minmax(min(var(--min-column-size), 100%), 1fr))
}

.container--start-exploring {
    text-align: center;
    margin: 10rem auto;
}

.container--start-exploring img {
    margin: 0 auto 0.5rem auto;
}

.movie--inner {
    max-width: 100%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-areas: 
    "details--title details--title"
    "movie-poster details--info"
    ;
    column-gap: 0.5rem;
    padding: 1rem;
    border: 1px solid var(--clr-borders);
    border-radius: 10px;
    background-color: var(--clr-bg-gray);
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.movie-poster {
    width: clamp(4.688rem, 0rem + 25vw, 7.813rem);
    grid-area: movie-poster;
}

.details--info {
    display: flex;
    flex-direction: column;
    grid-area: details--info;
    gap: 0.3rem;
}

.info {
    display: grid;
    grid-template-columns: auto auto;
}

.details--title {
    display: flex;
    gap: 0.4rem;
    grid-area: details--title;
    justify-content: center;
}

.title-year {
    margin: 0.2rem 0 0 0;
}

.details--rating {
    display: flex;
    align-items: baseline;
    margin: 0.3rem 0 0 0;
}

.info--summary p {
    text-align: left;
}

.watchlist-btn {
    background-color: transparent;
    border: none;
    display: flex;
    gap: 0.313rem;
    cursor: pointer;

        &:hover {
            text-decoration: underline;
        }
}

/* RESPONSIVE SCREEN */
@media (min-width: 500px) {
    .movie--inner {
        grid-template-areas:
        "movie-poster details--title"
        "movie-poster details--info"
        ;
        grid-template-rows: 28px auto;
        row-gap: 1.5em;
        column-gap: 1rem;
    }

    .details--title {
        margin: 0.8rem 0;
        justify-content: flex-start;
    }

    .details--info {
        gap: 0.9rem;
    }
}

@media (max-width: 910px) {
    .movie--inner {
        max-width: 500px;
    }
}

